# codarium_selene-into

./: README.md
selene-intro/: pyproject.toml
selene-intro/tests/: test_google.py  test_selene_xpath.py  test_todomvc.py
selene_intro/: helpers.py
selene_intro/dsl/: Its.py  __init__.py  xpath_builder.py
tests/: test_selene_xpath.py  test_smoke.py  test_todomvc.py
tests/css/: test_todomvc.py
tests/xpath/: test_selene_xpath.py  test_todomvc.py  test_todomvc_dsl.py
tests/xpath/with_dsl/: test_todomvc.py
tests/xpath/xpath_with_dsl/: test_todomvc.py
