[tool.poetry]
name = "selene-intro"
version = "0.1.0"
description = ""
authors = ["DimaQA <dimon.chernishov@gmail.com>"]
readme = "README.md"
packages = [{include = "selene_intro"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
